[package]
name = "ohttp-relay"
version = "0.0.1"
authors = ["Dan Gould <d@ngould.dev>"]
description = "Relay Oblivious HTTP requests to protect IP metadata"
repository = "https://github.com/payjoin/ohttp-relay"
readme = "README.md"
keywords = ["ohttp", "privacy"]
categories = ["web-programming", "network-programming"]
license = "MITNFA"
edition = "2021"
rust-version = "1.63.0"
resolver = "2"
exclude = ["tests"]

[features]
default = ["bootstrap"]
bootstrap = ["futures", "hyper-tungstenite", "rustls", "tokio-tungstenite"]

[dependencies]
futures = { version = "0.3", optional = true }
http-body-util = "0.1"
hyper = { version = "1", features = ["http1", "server"] }
hyper-rustls = { version = "0.26", features = ["webpki-roots"] }
hyper-tungstenite = { version = "0.13", optional = true }
hyper-util = { version = "0.1", features = ["client-legacy"] }
once_cell = "1"
rustls = { version = "0.22", optional = true }
tokio = { version = "1", features = ["io-std", "macros", "net", "rt-multi-thread"] }
tokio-tungstenite = { version = "0.21", optional = true }
tokio-util = { version = "0.7", features = ["net", "codec"] }

[dev-dependencies]
hex = { package = "hex-conservative", version = "0.1.1" }
rcgen = { version = "0.12", default-features = false, features = ["ring"] }
tokio-rustls = "0.25"