[package]
name = "ohttp-relay"
version = "0.0.10"
authors = ["Dan Gould <d@ngould.dev>"]
description = "Relay Oblivious HTTP requests to protect IP metadata"
repository = "https://github.com/payjoin/ohttp-relay"
readme = "README.md"
keywords = ["ohttp", "privacy"]
categories = ["web-programming", "network-programming"]
license = "MITNFA"
edition = "2021"
rust-version = "1.85.0"
resolver = "2"
exclude = ["tests"]

[features]
default = ["bootstrap"]
bootstrap = ["connect-bootstrap", "ws-bootstrap"]
connect-bootstrap = []
ws-bootstrap = ["futures", "hyper-tungstenite", "rustls", "tokio-tungstenite"]
_test-util = []

[dependencies]
byteorder = "1.5.0"
bytes = "1.10.1"
futures = { version = "0.3", optional = true }
http = "1"
http-body-util = "0.1"
hyper = { version = "1", features = ["http1", "server"] }
hyper-rustls = { version = "0.26", features = ["webpki-roots"] }
hyper-tungstenite = { version = "0.13", optional = true }
hyper-util = { version = "0.1", features = ["client-legacy"] }
rustls = { version = "0.22", optional = true }
tokio = { version = "1", features = ["io-std", "macros", "net", "rt-multi-thread"] }
tokio-tungstenite = { version = "0.21", optional = true }
tokio-util = { version = "0.7", features = ["net", "codec"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

[dev-dependencies]
hex = { package = "hex-conservative", version = "0.1.1" }
mockito = "0.31"
rcgen = "0.12"
tempfile = "3"
tokio = { version = "1", features = ["process", "test-util"] }
tokio-rustls = "0.25"
ureq = "=2.9.6"
uuid = { version = "0.8", features = ["v4"] }
